Set download links to latest release

--- a/content/static/dl/win.html
+++ b/content/static/dl/win.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases"></head></html>
+<html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/EFCK.Chat.Keyboard.Installer.exe"></head></html>
