--- a/content/static/dl/debian.html
+++ b/content/static/dl/debian.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases"></head></html>
+<html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/efck-chat-keyboard_1.0-1_all.deb"></head></html>
