--- a/content/static/dl/linux.html
+++ b/content/static/dl/linux.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases"></head></html>
+<html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/EFCK-Chat-Keyboard.Linux-x64.tar.gz"></head></html>
