Auto-close _blank download meta-redirects

--- a/content/static/dl/win.html
+++ b/content/static/dl/win.html
@@ -1,2 +1,4 @@
 <!doctype html>
 <html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/EFCK.Chat.Keyboard.Installer.exe"></head></html>
+<script>setTimeout(() => window.close(), 5000)</script>
+</head><body>Downloading ...
