--- a/content/static/dl/mac.html
+++ b/content/static/dl/mac.html
@@ -1,2 +1,4 @@
 <!doctype html>
 <html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/Efck.Chat.Keyboard.dmg"></head></html>
+<script>setTimeout(() => window.close(), 5000)</script>
+</head><body>Downloading ...
