Add Analytics on /dl/ redirects

--- a/content/static/dl/linux.html
+++ b/content/static/dl/linux.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/EFCK-Chat-Keyboard.Linux-x64.tar.gz"></head></html>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXD78DNM6S"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-JXD78DNM6S');</script>
 <script>setTimeout(() => window.close(), 5000)</script>
 </head><body>Downloading ...
