--- a/content/static/dl/mac.html
+++ b/content/static/dl/mac.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <html><head><meta http-equiv="refresh" content="0; url=https://github.com/efck-chat-keyboard/efck/releases/latest/download/Efck.Chat.Keyboard.dmg"></head></html>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXD78DNM6S"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-JXD78DNM6S');</script>
 <script>setTimeout(() => window.close(), 5000)</script>
 </head><body>Downloading ...
